--- a/OneNightInReact/src/App.css
+++ b/OneNightInReact/src/App.css
@@ -4,4 +4,83 @@
   padding: 2rem;
   text-align: center;
 }
+.App{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
 
+.main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: yellow; */
+  height: 100vh;
+    width: 100vw;
+}
+
+.firstLayer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  height: 100vh;
+  width: 90vw;
+  
+}
+
+.secondLayer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  height: 90vh;
+  width: 80vw;
+  
+}
+
+.thirdLayer{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: green;
+  height: 90vh;
+  width: 90vw;
+  
+}
+
+.card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  height: 20vh;
+  width: 20vw;
+  
+  border: 5px solid black;
+  margin: 10px;
+
+}
+
+.intro{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
+  
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
