--- a/OneNightInReact/src/App.css
+++ b/OneNightInReact/src/App.css
@@ -1,152 +1,47 @@
- #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#root{
+ text-align: center;    
 }
-.App{
+
+.Header{
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width:100%;
-  height: 100%;
+  background-image: url('headerBackground.png');
+  height: 20vh;
+  background-size: cover;
 }
 .nav{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: center;
-  height: 10%;
-  width: 90vw;
-  border: 10px solid white;
- 
+  background-color: rgba(255, 255, 255, .0);
+  height: 10vh;
+  width: 100vw;
 }
-.navButton{
-  margin: 10px;
-  color: white;
-  background-color: blue;
-  font-size: 1.5rem;
+.navButton .big-button{
+  box-shadow: 1px 4px 50px 1px #3dc21b;
+  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+  background-color: #44c767;
+  border-radius: 32px;
+  border: 4px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 20px;
   font-weight: bold;
+  padding: 13px 32px;
+  text-decoration: none;
+  text-shadow: 3px 4px 4px #2f6627;
 }
 
-.main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.navButton:hover {
+  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  background-color: #5cbf2a;
+}
+
+.navButton:active {
+  position: relative;
+  top: 1px;
+}
+
+.Main{
   background-color: yellow;
-  height: 100%;
-    width: 100%;
 }
-
-.firstLayer{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: red;
-  /* height: 100%;
-  width: 90%; */
-  
-}
-
-.secondLayer{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: blue;
-  height: 100vh;
-  width: 90%;
-  
-}
-
-.thirdLayer{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: green;
-  height: 90%;
-  width: 90%;
-  
-}
-
-.slideshow{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  height: 50%;
-  width: 100%;
-  border: 5px solid black;
-  margin: 10px;
-  color: black;
-
-}
-.cardContainer{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.card{
-  background-color: white;
-  height: 50%;
-  width: 100%;
-  border: 5px solid black;
-  margin: 10px;
-  color: black;
-}
-
-.intro{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  font-size: 3rem;
-  color: white;
-  font-weight: bold;
-  
-}
-
-::-webkit-scrollbar {
-  display: none;
-
-}
-
-.button{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  height: 10%;
-  width: 20%;
-  border: 5px solid black;
-  margin: 10px;
-  color: black;
-  font-size: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-}
-.input{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  height: 10%;
-  width: 50%;
-  border: 5px solid black;
-  margin: 10px;
-  color: black;
-  font-size: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-}
-
