--- a/OneNightInReact/src/App.css
+++ b/OneNightInReact/src/App.css
@@ -1,32 +1,51 @@
-#root{
- text-align: center;
- font-family: 'Fjalla One', 'Radly';
- color: black;
- text-shadow: 1px 4px 50px 1px #2f6627; 
+#root {
+  text-align: center;
+  font-family: 'Fjalla One', 'Radly';
+  color: black;
+  text-shadow: 1px 4px 50px 1px #f3960a;
 }
 
-.Header{
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  
+}
+
+/* HEADER AND NAV STYLE */
+.Header {
   display: flex;
   justify-content: center;
   align-items: center;
   background-image: url('headerBackground.png');
   height: 20vh;
   background-size: cover;
+  margin: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-.nav{
+
+.nav {
   background-color: rgba(255, 255, 255, .0);
   height: 10vh;
   width: 100vw;
 }
-.big-button{
+
+.big-button {
   width: 25px;
 }
 
-.navButton, .big-button{
+.navButton,
+.big-button {
   box-shadow: 1px 4px 100px 1px #e49011b5;
   background: linear-gradient(to bottom, #d46e0f 5%, #f09c14 100%);
-  background-color: #44c767;
   border-radius: 32px;
   border: 4px solid #ef8a17;
   display: inline-block;
@@ -37,11 +56,11 @@
   font-weight: bold;
   padding: 13px 32px;
   text-decoration: none;
-  text-shadow: 3px 4px 4px #ff9705;
+  text-shadow: 3px 4px 4px #895000;
 }
 
 .navButton:hover {
-  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  background: linear-gradient(to bottom, #f68c1a 5%, #efaa60 100%);
   background-color: #5cbf2a;
 }
 
@@ -50,47 +69,88 @@
   top: 1px;
 }
 
-.Main{
-  /* background-color: yellow; */
+/* HOME PAGE STYLING */
+
+.featured-main{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  width: 100vw;
+  height: 25%;
+  background-color: rgba(202, 153, 105, 0.25);
 }
 
-.featured-section{
-  /* background-color: red; */
-
-}
-.featured-meal{
+.featured-section {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin: 5px;
+  padding: 10px 0px;
 }
-.featured-section-header{
-  
+
+.featured-meal {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3), 0 3px 6px rgba(0, 0, 0, 0.38);
+  padding: 5px 0px;
+  background-color: white;
+}
+
+.featured-section-header {
+  background-color: rgba(255, 255, 255, .0);
   font-size: 2em;
 }
 
-.food-image{
-  width: 60%;
-  height: 60%;
-  object-fit: cover;
+.food-image {
+  height: 50%;
+  width: 50%;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  
 }
 
-.meal{
-  overflow: auto;
-  height: 60vh;
+.meal-list-header{
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+
+.meal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 90%;
+  margin: 10px;
+}
+
+.mealCard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 25%;
+  height: 25%;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  
+  padding: 10px;
 }
 
-.mealCard{
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+.mealCard:hover {
+  background-color: rgba(255, 151, 5, 0.1);
+  color: black;
+  border: solid 1px #9d5c00;
+  width: 40%;
+  height: 40%;
+  box-shadow: 0px 3px 600px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.Footer{
+/* FOOTER STYLING */
+
+.Footer {
   background-image: url('headerBackground.png');
   display: flex;
   justify-content: center;
@@ -99,7 +159,51 @@
   height: 20vh;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-/* Webkit Tools */
-::-webkit-scrollbar {
-  display: none;
+
+
+/* CATEGORY PAGE STYLING */
+
+.categoryMain{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; 
+  
 }
+
+.categoryList{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 90%;
+  width: 100%;
+  margin: 10px;
+  
+  
+  
+}
+
+.categoryCard{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  width: 25%;
+  height: 100%;
+}
+
+.categoryImage{
+  height: 10%;
+  width: 90%;
+}
+
+/* WEBKIT TOOLS */
+/* ::-webkit-scrollbar {
+  display: none;
+} */
