--- a/OneNightInReact/src/App.css
+++ b/OneNightInReact/src/App.css
@@ -111,7 +111,7 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.meal-list-header{
+.meal-list-header {
   display: flex;
   justify-content: center;
   align-items: center;  
@@ -203,7 +203,84 @@
   width: 90%;
 }
 
+
+/* RECIPIE CARD FOR INDIVIDUAL MEAL */
+.meal-detail-header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(202, 153, 105, 0.25);
+}
+
+.mini-nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: black;
+}
+
+.meal-detail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 99%;
+  height: 100%;
+  background-color: rgba(202, 153, 105, 0.25);
+}
+
+.meal-detail-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 10px;
+  width: 80%;
+  height: 100%;
+  background-color: white;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.meal-instructions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+  width: 80%;
+  height: 100%;
+  background-color: white;
+}
+
+.meal-ingredients{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 80%;
+  height: 100%;
+  background-color: white;
+
+}
+
 /* WEBKIT TOOLS */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-} */
+}
