--- a/OneNightInReact/src/App.css
+++ b/OneNightInReact/src/App.css
@@ -1,8 +1,8 @@
 #root {
   text-align: center;
   font-family: 'Fjalla One', 'Radly';
-  color: black;
-  text-shadow: 1px 4px 50px 1px #f3960a;
+  color: #f3960a;
+  text-shadow: 1px 4px 50px 1px black;
 }
 
 .App{
@@ -16,7 +16,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  
+  /* color: #f3960a; */
+    text-shadow: 1px 1px 1px black;
   
 }
 
@@ -30,6 +31,18 @@
   background-size: cover;
   margin: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  color: #f3960a;
+    text-shadow: 1px 1px 0px black;
+}
+
+.header-title{
+ color: white;
+ background-color: rgba(255, 255, 255, .2);
+ font-size: 3em;
+ font-family: 'fjalla one';
+color: #f3960a;
+  text-shadow: 1px 4px 50px 1px black;
+
 }
 
 .nav {
@@ -57,11 +70,6 @@
   padding: 13px 32px;
   text-decoration: none;
   text-shadow: 3px 4px 4px #895000;
-}
-
-.navButton:hover {
-  background: linear-gradient(to bottom, #f68c1a 5%, #efaa60 100%);
-  background-color: #5cbf2a;
 }
 
 .navButton:active {
@@ -97,7 +105,7 @@
   flex-direction: column;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3), 0 3px 6px rgba(0, 0, 0, 0.38);
   padding: 5px 0px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 .featured-section-header {
@@ -139,15 +147,6 @@
   padding: 10px;
 }
 
-.mealCard:hover {
-  background-color: rgba(255, 151, 5, 0.1);
-  color: black;
-  border: solid 1px #9d5c00;
-  width: 40%;
-  height: 40%;
-  box-shadow: 0px 3px 600px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-
 /* FOOTER STYLING */
 
 .Footer {
@@ -163,7 +162,7 @@
 
 /* CATEGORY PAGE STYLING */
 
-.categoryMain{
+.categoryMain, .categoryDetail {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -277,10 +276,52 @@
   width: 80%;
   height: 100%;
   background-color: white;
+  
+}
 
+/* searchbar */
+
+.searchbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 10px;
+  padding: 10px;
+  background-color: transparent;
+  width: 50vw;
+  margin-left: 25vw;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.searchbar-input{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 50vw;
+  height: 100%;
+  background-color: transparent;
+  margin: 10px;
 }
 
 /* WEBKIT TOOLS */
 ::-webkit-scrollbar {
   display: none;
+}
+
+/* HOVER EFFECTS */
+.navButton:hover {
+  background: linear-gradient(to bottom, #f68c1a 5%, #efaa60 100%);
+  background-color: #5cbf2a;
+}
+
+.mealCard:hover, .categoryCard:hover {
+  background-color: rgba(255, 151, 5, 0.1);
+  color: black;
+  border: solid 1px #9d5c00;
+  width: 30%;
+  height: 30%;
+  box-shadow: 0px 3px 600px rgba(0, 0, 0, 0.5), 0 3px 6px rgba(0, 0, 0, 0.23);
+  text-shadow: 1px 1px 0px #ff7b00;
 }
